2009-10-28  Jonathan Dixon  <joth@chromium.org>

Reviewed by Eric Seidel.

        Bug 30547: (Chromium) searchbox not rendered properly due to the css property -webkit-border-radius
        https://bugs.webkit.org/show_bug.cgi?id=30547

        * fast/css/text-input-with-webkit-border-radius-expected.checksum: Added.
        * fast/css/text-input-with-webkit-border-radius-expected.png: Added.
        * fast/css/text-input-with-webkit-border-radius-expected.txt: Added.
        * fast/css/text-input-with-webkit-border-radius.html: Added.
2009-10-28  Jonathan Dixon  <joth@chromium.org>

        Reviewed by Eric Seidel.

        Bug 30547: (Chromium) searchbox not rendered properly due to the css property -webkit-border-radius
        https://bugs.webkit.org/show_bug.cgi?id=30547

        Test: fast/css/text-input-with-webkit-border-radius.html

        * rendering/RenderThemeChromiumWin.cpp:
        (WebCore::RenderThemeChromiumWin::paintTextFieldInternal):
          Implemented rounded border rendering in Chromium Windows theme renderer.

Canonical link: https://commits.webkit.org/41679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50237 268f45cc-cd09-0410-ab3c-d52691b4dbfc